	[rmcardle] Fix issue MR-333 - Unnecessary prompt for 'close all open connections?'
	[rmcardle] Fixed issue MR-158 - Password field not accepting Pipe
	[rmcardle] Fixed issue MR-130 - Issues duplicating folders
	[rmcardle] Fixed issue MR-121 - Config pane not sorting properties correctly when switching between alphabetical and categorized view
	Updated WeifenLuo.WinFormsUI.Docking to 2.7
	The version of the RDP AX client updated to 7
	SharpSSH replaced with Renci.SshNet
	Items in context menu on connection tab now hides instead of disabling
	Integrated IPTextBox
	Added extended SSH file transfer
	Added scanning host for common services
	Added GeckoFX v16 HTTP(S) Rendering engine - http://ftp.mozilla.org/pub/mozilla.org/xulrunner/releases/16.0.2/runtimes/
	Added option to start connection on app startup
	Added option to start connection on double click
	Added basic Serial protocol support (buggy)
	Added basic TeamViewer support (buggy)
	Added basic RAdmin support (buggy)
	Added Connection Status Form
	Added Quick Text (limited support)
	Added Components problem fixer
	Added option to lock ToolStrips
	Added ability to update portable version

1.70 (XXXX-XX-XX):
  Fix issue MR-77 - VerifyDatabaseVersion (Config.Connections.Save) failed. Version string portion was too short or too long.
  Fix issue MR-78 - Renaming Connections
  Fix issue MR-79 - MoveUp/Down item doesn't work + Sort button broken
  Fix issue MR-93 - Regional settings problem when using SQL connection in mRemoteNG
  Fix issue MR-97 - Integrate Dutch translation
  Fix issue MR-98 - Integrate Russian and Ukranian translations
  Fix issue MR-99 - Integrate Spanish translation
  Fix issue MR-131 - RD Gateway does not respect setting for use different credentials
  Added compatibility check for "Use FIPS compliant algorithms" security setting.
  Improved reporting of errors when encrypting and decrypting connection files.
  Added partial Polish translation.