@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
   <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="My.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
@@ -11,6 +12,52 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
+
+  <log4net>
+    <logger name="Logger">
+      <level value="INFO"/>
+    </logger>
+
+    <root>
+      <level value="ALL"/>
+      <appender-ref ref="LogFileAppender"/>
+    </root>
+
+    <appender name="LogFileAppender" type="log4net.Appender.FileAppender">
+      <file value="${USERPROFILE}\AppData\Local\mRemoteNG\mRemoteNG.log"/>
+      <!-- Example using environment variables in params -->
+      <!-- <file value="${TMP}\log-file.txt" /> -->
+      <appendToFile value="true"/>
+      <!-- An alternate output encoding can be specified -->
+      <!-- <encoding value="unicodeFFFE" /> -->
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level- %message%newline"/>
+      </layout>
+      <!-- Alternate layout using XML			
+				<layout type="log4net.Layout.XMLLayout" /> -->
+    </appender>
+  </log4net>
+  <system.diagnostics>
+    <sources>
+      <!-- This section defines the logging configuration for My.Application.Log -->
+      <source name="DefaultSource" switchName="DefaultSwitch">
+        <listeners>
+          <add name="FileLog"/>
+          <!-- Uncomment the below section to write to the Application Event Log -->
+          <!--<add name="EventLog"/>-->
+        </listeners>
+      </source>
+    </sources>
+    <switches>
+      <add name="DefaultSwitch" value="Information"/>
+    </switches>
+    <sharedListeners>
+      <add name="FileLog" type="Microsoft.VisualBasic.Logging.FileLogTraceListener, Microsoft.VisualBasic, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" initializeData="FileLogWriter"/>
+      <!-- Uncomment the below section and replace APPLICATION_NAME with the name of your application to write to the Application Event Log -->
+      <!--<add name="EventLog" type="System.Diagnostics.EventLogTraceListener" initializeData="APPLICATION_NAME"/> -->
+    </sharedListeners>
+  </system.diagnostics>
+  
   <userSettings>
     <My.Settings>
       <setting name="MainFormLocation" serializeAs="String">
